@startuml
'https://plantuml.com/sequence-diagram

!include Style.puml

hide circle
hide empty methods
hide empty attributes

'left to right direction

package module <<Rectangle>> {
    class ModuleDb MODULE_COLOR
    class ModuleListStorage MODULE_COLOR
    class ModuleList MODULE_COLOR
    class ModuleDetails MODULE_COLOR
}

package commands <<Rectangle>> {
    class "ABSTRACT\nCommand" COMMANDS_COLOR
    class ModuleCommand COMMANDS_COLOR
}


"ABSTRACT\nCommand" ^-- ModuleCommand
"ABSTRACT\nCommand" --> "1" ModuleDb
ModuleCommand ..> "1" ModuleListStorage
"ABSTRACT\nCommand" -> "1" ModuleList
ModuleList -> "*" ModuleDetails
@enduml